--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -117,15 +117,15 @@
             <div class="layui-form-item">
               <label class="layui-form-label">标题</label>
               <div class="layui-input-block">
-                <input type="text" id="esTitle" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                <input type="text" id="es-ESTitle" placeholder="请输入标题" autocomplete="off" class="layui-input">
               </div>
             </div>
 
             <div class="layui-form-item">
               <label class="layui-form-label">内容</label>
               <div class="layui-input-block">
-                <div id="es"></div>
-                <textarea id="esHtml" placeholder="请输入内容" autocomplete="off" class="layui-textarea"></textarea>
+                <div id="es-ES"></div>
+                <textarea id="es-ESHtml" placeholder="请输入内容" autocomplete="off" class="layui-textarea"></textarea>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
             <option value="en">英语</option>
             <option value="zh-TW">繁中</option>
             <option value="ko">韩语</option>
-            <option value="es">西班牙语</option>
+            <option value="es-ES">西班牙语</option>
             <option value="it">意大利语</option>
             <option value="fr">法语</option>
             <option value="de">德语</option>
@@ -243,7 +243,7 @@
     jaEditor = getDefaultEditor('#ja');
     zh_TWEditor = getDefaultEditor('#zh-TW');
     koEditor = getDefaultEditor('#ko');
-    esEditor = getDefaultEditor('#es');
+    es_ESEditor = getDefaultEditor('#es-ES');
     itEditor = getDefaultEditor('#it');
     frEditor = getDefaultEditor('#fr');
     deEditor = getDefaultEditor('#de');
@@ -253,7 +253,7 @@
       else if (lang == "ja") return jaEditor;
       else if (lang == "zh-TW") return zh_TWEditor;
       else if (lang == "ko") return koEditor;
-      else if (lang == "es") return esEditor;
+      else if (lang == "es-ES") return es_ESEditor;
       else if (lang == "it") return itEditor;
       else if (lang == "fr") return frEditor;
       else if (lang == "de") return deEditor;
@@ -305,10 +305,10 @@
         $(koEditor.toolbarSelector + "Html").val(outputStr);
       }
 
-      esEditor.config.onchange = function (newHtml) {
-        let jsonData = esEditor.txt.getJSON();
+      es_ESEditor.config.onchange = function (newHtml) {
+        let jsonData = es_ESEditor.txt.getJSON();
         let outputStr = ExecuteJsonData(jsonData);
-        $(esEditor.toolbarSelector + "Html").val(outputStr);
+        $(es_ESEditor.toolbarSelector + "Html").val(outputStr);
       }
 
       itEditor.config.onchange = function (newHtml) {
@@ -337,7 +337,7 @@
         }
 
         let mLang = {};
-        let langs = ["en", "zh-CN", "ja", "zh-TW", "ko", "es", "it", "fr", "de"];
+        let langs = ["en", "zh-CN", "ja", "zh-TW", "ko", "es-ES", "it", "fr", "de"];
         for (let i = 0; i < langs.length; ++i) {
           let lang = langs[i];
           let title = $('#' + lang + 'Title').val();
