--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -76,7 +76,7 @@
         <ul id="tabTitle" class="layui-tab-title ok-tab-title not-scroll">
           <li class="layui-this" lay-id="1" tab="index">
             <i class="ok-icon">&#xe654;</i>
-            <cite is-close=false>总况</cite>
+            <cite is-close=false>数据总览</cite>
           </li>
           <li lay-id="2-1-1" tab="index">
             <i class="ok-icon">&#xe654;</i>
