--- a/front/pages/stat/all.html
+++ b/front/pages/stat/all.html
@@ -24,7 +24,7 @@
             <div class="cart-r">
               <div id="rgeToday" class="stat-text layui-inline">0</div>/
               <div id="rgeTotal" class="stat-text layui-inline">0</div>
-              <div class="stat-heading">今日充值/累积充值</div>
+              <div class="stat-heading">本日充值金额/累积充值金额</div>
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
             <div class="cart-r">
               <div id="accountToday" class="stat-text layui-inline">0</div>/
               <div id="accountTotal" class="stat-text layui-inline">0</div>
-              <div class="stat-heading">今日注册/总注册</div>
+              <div class="stat-heading">本日注册人数/总注册人数</div>
             </div>
           </div>
         </div>
@@ -55,7 +55,7 @@
               <div id="rgeRoleNumToday" class="stat-text layui-inline">0</div>/
               <div id="rgeNewRoleNumToday" class="stat-text layui-inline">0</div>/
               <div id="rgeRoleNumTotal" class="stat-text layui-inline">0</div>
-              <div class="stat-heading">今日充值人数/今日新增充值人数/累计充值人数</div>
+              <div class="stat-heading">本日充值人数/本日新增充值人数/累计充值人数</div>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
               <div id="newaddToday" class="stat-text layui-inline">0</div>/
               <div id="activeToday" class="stat-text layui-inline">0</div>/
               <div id="newaddTotal" class="stat-text layui-inline">0</div>
-              <div class="stat-heading">今日新增/今日活跃/总创角</div>
+              <div class="stat-heading">本日新增角色数/本日活跃角色数/总角色数</div>
             </div>
           </div>
         </div>
