--- a/front/pages/gm/dir-add.html
+++ b/front/pages/gm/dir-add.html
@@ -11,13 +11,13 @@
     <form class="layui-form layui-form-pane ok-form">
 	    <div class="layui-form-item">
 		    <div class="layui-inline">
-		    	<label class="layui-form-label">分区ID</label>
+		    	<label class="layui-form-label">区分ID</label>
 		    	<div class="layui-input-inline">
-		    		<input type="text" name="iZoneId" placeholder="请输入分区ID" autocomplete="off" class="layui-input" lay-verify="required|integer" lay-verType="tips">
+		    		<input type="text" name="iZoneId" placeholder="请输入区服名称" autocomplete="off" class="layui-input" lay-verify="required|integer" lay-verType="tips">
 		    	</div>
 		    </div>
 		    <div class="layui-inline">
-		    	<label class="layui-form-label">分区名字</label>
+		    	<label class="layui-form-label">区服名称</label>
 		    	<div class="layui-input-inline">
 		    		<input type="text" name="sZoneName" placeholder="请输入分区名字" autocomplete="off" class="layui-input" lay-verify="required" lay-verType="tips">
 		    	</div>
@@ -37,7 +37,7 @@
       </div>
 	    <div class="layui-form-item">
         <div class="layui-inline">
-			    <label class="layui-form-label">分区标识</label>
+			    <label class="layui-form-label">区服标识</label>
 			    <div class="layui-input-inline">
             <select name="iZoneFlag">
               <option value="1" selected>正常</option>
