--- a/front/pages/gm/mail-add.html
+++ b/front/pages/gm/mail-add.html
@@ -304,7 +304,7 @@
             <legend>指定玩家发送</legend>
             <div class="layui-field-box">
               <div class="layui-form-item">
-                <label>每行格式(空格隔开): 分区ID 玩家ID(小于60k的txt文件)</label>
+                <label>每行格式(空格隔开): 区分ID 玩家ID(小于60k的txt文件)</label>
                 <button type="button" class="layui-btn layui-btn-disabled" disabled id="file">
                   <i class="layui-icon">&#xe67c;</i>上传文件
                 </button>
