--- a/front/pages/gm/dir-edit.html
+++ b/front/pages/gm/dir-edit.html
@@ -13,16 +13,16 @@
     <form class="layui-form layui-form-pane ok-form">
       <div class="layui-form-item">
         <div class="layui-inline">
-          <label class="layui-form-label">分区ID</label>
+          <label class="layui-form-label">区分ID</label>
           <div class="layui-input-inline">
-            <input type="text" name="iZoneId" placeholder="请输入分区ID" disabled autocomplete="off"
+            <input type="text" name="iZoneId" placeholder="请输入区分ID" disabled autocomplete="off"
               class="layui-input layui-disabled" lay-verify="required|number" lay-verType="tips">
           </div>
         </div>
         <div class="layui-inline">
-          <label class="layui-form-label">分区名字</label>
+          <label class="layui-form-label">区服名称</label>
           <div class="layui-input-inline">
-            <input type="text" name="sZoneName" placeholder="请输入分区名字" autocomplete="off" class="layui-input"
+            <input type="text" name="sZoneName" placeholder="请输入区服名称" autocomplete="off" class="layui-input"
               lay-verify="required" lay-verType="tips">
           </div>
         </div>
@@ -43,7 +43,7 @@
       </div>
       <div class="layui-form-item">
         <div class="layui-inline">
-          <label class="layui-form-label">分区标识</label>
+          <label class="layui-form-label">区服标识</label>
           <div class="layui-input-inline">
             <select name="iZoneFlag">
               <option value="1">正常</option>
