--- a/front/pages/gm/dir-version.html
+++ b/front/pages/gm/dir-version.html
@@ -20,7 +20,7 @@
     <form class="layui-form layui-form-pane ok-form">
       <div class="layui-form-item">
         <div class="layui-block">
-          <label class="layui-form-label">分区ID</label>
+          <label class="layui-form-label">区分ID</label>
           <div class="layui-input-block">
             <div id="zoneSelect"></div>
           </div>
