--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -80,7 +80,7 @@
           </li>
           <li lay-id="2-1-1" tab="index">
             <i class="ok-icon">&#xe654;</i>
-            <cite is-close=false>GM1</cite>
+            <cite is-close=false>GM命令1</cite>
           </li>
         </ul>
 
