--- a/front/pages/gm/whitelist.html
+++ b/front/pages/gm/whitelist.html
@@ -14,7 +14,7 @@
       <div class="layui-form-item">
         <div class="layui-input-block"></div>
           <br>
-          <label><b style="font-size: 22px; color:#ffffff">当前白名单列表</b></label>
+          <label><b style="font-size: 22px; color:#000000">当前白名单列表</b></label>
           <br>
           <br>
           <div name="list" style="width:50%; word-wrap:break-word; color:#002bff"></div>
@@ -30,9 +30,9 @@
 
       <div class="layui-form-item">
         <div class="layui-input-block">
-          <button class="layui-btn" lay-submit lay-filter="add" style="color: #1CDBFF;">增加到白名单</button>
-          <button class="layui-btn" lay-submit lay-filter="del" style="color: #1CDBFF;">从白名单删除</button>
-          <button class="layui-btn" lay-submit lay-filter="replace" style="color: #1CDBFF;">覆盖白名单</button>
+          <button class="layui-btn layui-btn-warm" lay-submit lay-filter="add">增加到白名单</button>
+          <button class="layui-btn layui-btn-warm" lay-submit lay-filter="del">从白名单删除</button>
+          <button class="layui-btn layui-btn-warm" lay-submit lay-filter="replace">覆盖白名单</button>
         </div>
       </div>
 
@@ -44,7 +44,7 @@
         <div class="layui-form-item">
           <div class="layui-input-block">
             <br>
-            <label><b style="font-size: 22px; color:#ffffff">临时白名单列表</b></label>
+            <label><b style="font-size: 22px; color:#000000">临时白名单列表</b></label>
             <br>
             <br>
             <div name="tmplist" style="width:50%; word-wrap:break-word"></div>
