--- a/front/pages/gm/whitelist.html
+++ b/front/pages/gm/whitelist.html
@@ -60,8 +60,8 @@
 
         <div class="layui-form-item">
           <div class="layui-input-block">
-            <button class="layui-btn" lay-submit lay-filter="addtmp">增加到临时白名单</button>
-            <button class="layui-btn" lay-submit lay-filter="deltmp">从临时白名单删除</button>
+            <button class="layui-btn layui-btn-warm" lay-submit lay-filter="addtmp">增加到临时白名单</button>
+            <button class="layui-btn layui-btn-warm" lay-submit lay-filter="deltmp">从临时白名单删除</button>
           </div>
         </div>
 
