--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -52,7 +52,7 @@
               switch (d.iFlag) {
                 case 0: ret = '正常'; break;
                 case 1: ret = '未开启'; break;
-                case 2: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">已结束</span>'; break;
+                case 2: ret = '<span class="layui-btn layui-btn-warm layui-btn-xs">已结束</span>'; break;
                 default:
                   ret = '未知状态';
               }
