--- a/front/pages/gm/channel.html
+++ b/front/pages/gm/channel.html
@@ -35,9 +35,8 @@
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
           { field: "sChannel", title: "渠道", width: 90, fixed: 'left' },
-          { field: "sAddress", title: "exe更新地址" },
           { field: "sRes", title: "res更新地址" },
-          { field: "sShopVer", title: "商店版本号" },
+          { field: "sShopVer", title: "版本号" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
