--- a/front/pages/gm/dir-edit.html
+++ b/front/pages/gm/dir-edit.html
@@ -49,7 +49,6 @@
               <option value="1">正常</option>
               <option value="2">新区</option>
               <option value="3">关闭</option>
-              <option value="4">审核</option>
             </select>
           </div>
         </div>
@@ -122,12 +121,10 @@
           let channel = response.data[i];
           let v = parent.zonedata.mVersion[channel.sChannel];
           let sRes = '';
-          let sExe = '';
           if (v) {
             sRes = v.sRes;
-            sExe = v.sExe;
           }
-          channelHtml += '<fieldset class="layui-elem-field"><legend>'+channel.sChannel+'</legend><div class="layui-field-box"><div class="layui-form-item"><div class="layui-inline"><label class="layui-form-label">资源</label><div class="layui-input-inline"><input type="text" name="s'+channel.sChannel+'ResVersion" placeholder="请输入5位版本号" autocomplete="off" class="layui-input" lay-verify="required|version" lay-verType="tips" value="'+sRes+'"></div></div><div class="layui-inline"><label class="layui-form-label">exe</label><div class="layui-input-inline"><input type="text" name="s'+channel.sChannel+'ExeVersion" placeholder="请输入3位版本号" autocomplete="off" class="layui-input" lay-verify="required|version" lay-verType="tips" value="'+sExe+'"></div></div></div></div></fieldset>';
+          channelHtml += '<fieldset class="layui-elem-field"><legend>'+channel.sChannel+'</legend><div class="layui-field-box"><div class="layui-form-item"><div class="layui-inline"><label class="layui-form-label">资源</label><div class="layui-input-inline"><input type="text" name="s'+channel.sChannel+'ResVersion" placeholder="请版本号" autocomplete="off" class="layui-input" lay-verify="required" lay-verType="tips" value="'+sRes+'"></div></div></div></div></fieldset>';
         }
         if (channelHtml != '') {
           $("#versionFlag").before(channelHtml);
@@ -147,20 +144,6 @@
       $("input[name='iMaxOnline']").val(parent.zonedata.iMaxOnline);
       $("select[name='iIsKick']").val(parent.zonedata.iIsKick);
       form.render('select');
-
-      //数据校验
-      form.verify({
-        "version": function (value, item) {
-          let v = value.split('.');
-          let l = 5;
-          if (item.name.indexOf('Exe') != -1) {
-            l = 3;
-          }
-          if (v.length != l) {
-            return '版本号格式不对';
-          }
-        }
-      });
 
       //监听提交
       form.on('submit(add)', function (data) {
