--- a/front/pages/gm/auto-open-server.html
+++ b/front/pages/gm/auto-open-server.html
@@ -70,12 +70,12 @@
         cols: [[
           { type: "checkbox", title: "序号"},
           { field: "iZoneId", title: "分区ID", width: 70},
-          { field: "sNode", title: "node"},
+          { field: "sNode", title: "node", width: 150},
           { field: "sDBInfo", title: "数据库信息"},
           { field: "sConnaddr", title: "开服地址"},
-          { field: "iMaxNum", title: "最大创角", width: 70 },
-          { field: "iMaxOnline", title: "最大在线", width: 70 },
-          { field: "iOpenServerNum", title: "自动开服人数", width: 70 },
+          { field: "iMaxNum", title: "最大创角", width: 100 },
+          { field: "iMaxOnline", title: "最大在线", width: 100 },
+          { field: "iOpenServerNum", title: "自动开服人数", width: 100 },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
