--- a/front/pages/game/role.html
+++ b/front/pages/game/role.html
@@ -83,6 +83,7 @@
       page: true,
       cols: [[
         {field: "id", title: "角色ID"},
+        {field: "actorid", title: "actorid"},
         {field: "name", title: "角色名称"},
         {field: "vip_level", title: "vip等级", sort: true},
         {field: "last_login_time", title: "最后登录时间"},
