--- a/front/pages/game/recharge-log.html
+++ b/front/pages/game/recharge-log.html
@@ -19,7 +19,10 @@
           <div id="zoneSelect"></div>
         </div>
         <div class="layui-input-inline">
-          <input class="layui-input" lay-verify="required|number" lay-verType="tips" placeholder="请输入角色id" autocomplete="off" name="roleid">
+          <input class="layui-input" lay-verType="tips" placeholder="请输入角色id" autocomplete="off" name="roleid">
+        </div>
+        <div class="layui-input-inline">
+          <input class="layui-input" lay-verType="tips" placeholder="请输入流水号或订单号" autocomplete="off" name="orderno">
         </div>
         <div class="layui-input-inline">
           <input class="layui-input" lay-verify="required" lay-verType="tips" placeholder="开始日期" autocomplete="off" id="startTime" name="startTime">
