--- a/front/pages/game/mail-send.html
+++ b/front/pages/game/mail-send.html
@@ -85,7 +85,7 @@
       }
     });
 
-    okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
+    okUtils.ajax("/api/gm/zone/simplelist", "get", { game: true, all: true }, false).done(function (response) {
       zoneSelect.update({
         data: response.data["game"],
       });
