--- a/front/pages/gm/mail-add.html
+++ b/front/pages/gm/mail-add.html
@@ -529,7 +529,7 @@
           }
         },
       });
-      okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
+      okUtils.ajax("/api/gm/zone/simplelist", "get", {game:true, all:true}, false).done(function (response) {
         zoneSelect1.update({
           data: response.data["game"],
         });
