--- a/front/pages/gm/mail-add2.html
+++ b/front/pages/gm/mail-add2.html
@@ -264,7 +264,7 @@
           }
         }
       });
-      okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
+      okUtils.ajax("/api/gm/zone/simplelist", "get", { game: true, all: true }, false).done(function (response) {
         zoneSelect1.update({
           data: response.data["game"],
         });
