--- a/front/pages/gm/dir.html
+++ b/front/pages/gm/dir.html
@@ -133,7 +133,8 @@
               return formatVersionColumn(d.mVersion);
             }
           },
-          { field: "sNode", title: "合服id" },
+          { field: "sNode", title: "Node" },
+          { field: "iMergeToZoneId", title: "合服id" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
